tests/reference/asr-test_list_slicing-984fbf0.stderr
semantic error: slice step cannot be zero
 --> tests/errors/test_list_slicing.py:6:18
  |
6 |     print(l[0:10:0])
  |                  ^ 


Note: Please report unclear or confusing messages as bugs at
https://github.com/lcompilers/lpython/issues.
